--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,11 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
+    <!-- ionic starter firebase -->
+    <script src="js/auth.js"></script>
+    <script src="js/utils.js"></script>
+
   </head>
   <body ng-app="starter">
     <!--
