add google login

--- a/www/index.html
+++ b/www/index.html
@@ -54,12 +54,12 @@
   </body>
 
   <script>
-    // Initialize the Firebase SDK
+    // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyDjVMMn_IOXl7VN-W1Hb6mrsroYHG9O8vo",
-      authDomain: "ionic-starter-auth-firebase.firebaseapp.com",
-      databaseURL: "https://ionic-starter-auth-firebase.firebaseio.com",
-      storageBucket: "ionic-starter-auth-firebase.appspot.com",
+      apiKey: "AIzaSyCHpCMEZFkyQSsIzFmOmxGroL5JWrES1mA",
+      authDomain: "ionic-starter-messenger.firebaseapp.com",
+      databaseURL: "https://ionic-starter-messenger.firebaseio.com",
+      storageBucket: "ionic-starter-messenger.appspot.com",
     };
     firebase.initializeApp(config);
   </script>
